--- a/webgl-test-2/index.html
+++ b/webgl-test-2/index.html
@@ -3,30 +3,37 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>WebGL2 System</title>
+  <title>WebGL2 System - Free Camera + WASD/QE</title>
   <style>
     html, body { margin: 0; height: 100%; background: #111; }
-    canvas { width: 100%; height: 100%; display: block; }
+    canvas { width: 100%; height: 100%; display: block; outline: none; }
     .hud {
       position: fixed; top: 10px; left: 10px;
-      color: #ddd; font: 12px/1.3 system-ui, sans-serif;
-      background: rgba(0,0,0,.45); padding: 8px 10px; border-radius: 8px;
+      color: #ddd; font: 12px/1.35 system-ui, sans-serif;
+      background: rgba(0,0,0,.45); padding: 8px 10px; border-radius: 10px;
       user-select: none;
+    }
+    .hud b { color: #fff; }
+    .hud kbd {
+      background: rgba(255,255,255,.1);
+      border: 1px solid rgba(255,255,255,.15);
+      border-bottom-color: rgba(255,255,255,.25);
+      padding: 1px 6px;
+      border-radius: 6px;
+      font: 11px/1.2 ui-monospace, SFMono-Regular, Menlo, monospace;
+      margin-right: 4px;
     }
   </style>
 </head>
 <body>
-  <canvas id="gl"></canvas>
+  <canvas id="gl" tabindex="0"></canvas>
   <div class="hud">
-    WebGL2 System<br/>
-    Drag = orbit-ish (yaw/pitch) • Wheel = zoom
+    <b>WebGL2 System</b><br/>
+    Drag: look • Wheel: forward/back<br/>
+    <kbd>W</kbd><kbd>A</kbd><kbd>S</kbd><kbd>D</kbd> move • <kbd>Q</kbd>/<kbd>E</kbd> down/up • <kbd>Shift</kbd> faster
   </div>
 
 <script type="module">
-/** =========================
- *  WebGL2 System (mini-engine)
- *  ========================= */
-
 class GLSystem {
   /** @param {HTMLCanvasElement} canvas */
   constructor(canvas) {
@@ -35,32 +42,33 @@ class GLSystem {
     this.canvas = canvas;
     this.gl = gl;
 
-    // State
+    // Timing
     this.time = 0;
     this.dt = 0;
     this._last = performance.now();
 
-    // Camera-ish controls
+    // Free camera (position IS the movement center)
     this.camera = {
-      yaw: 0.6,
-      pitch: 0.4,
-      distance: 5.0,
-      target: [0, 0, 0],
+      pos: [0, 1.25, 6],  // start slightly above so you see something
+      yaw: 0.0,
+      pitch: 0.0,
       dragging: false,
       lastX: 0,
       lastY: 0,
     };
 
-    // Resize + default GL settings
+    // Keys
+    this.keys = new Set();
+
     this._installResize();
     this._installInput();
+    this._installKeyboard();
     this._setDefaultState();
 
-    // Simple scene objects
+    // Program + mesh
     this.program = createProgram(gl, VERT_SRC, FRAG_SRC);
-    this.mesh = createCubeMesh(gl);
+    this.mesh = createCubeMesh(gl); // Fix B: correct outer faces
 
-    // Uniform locations
     this.u = {
       uMVP: gl.getUniformLocation(this.program, "uMVP"),
       uModel: gl.getUniformLocation(this.program, "uModel"),
@@ -68,20 +76,17 @@ class GLSystem {
       uColor: gl.getUniformLocation(this.program, "uColor"),
     };
 
-    // Start
     this._raf = requestAnimationFrame(this._frame);
-  }
-
-  destroy() {
-    cancelAnimationFrame(this._raf);
   }
 
   _setDefaultState() {
     const gl = this.gl;
     gl.enable(gl.DEPTH_TEST);
     gl.depthFunc(gl.LEQUAL);
+
     gl.enable(gl.CULL_FACE);
-    gl.cullFace(gl.BACK);
+    gl.cullFace(gl.BACK); // Fix B geometry => default CCW fronts are correct
+
     gl.clearColor(0.06, 0.06, 0.08, 1.0);
   }
 
@@ -96,7 +101,6 @@ class GLSystem {
         this.gl.viewport(0, 0, w, h);
       }
     };
-    this._resize = resize;
     new ResizeObserver(resize).observe(this.canvas);
     window.addEventListener("resize", resize, { passive: true });
     resize();
@@ -107,6 +111,7 @@ class GLSystem {
     const cam = this.camera;
 
     c.addEventListener("pointerdown", (e) => {
+      c.focus();
       cam.dragging = true;
       cam.lastX = e.clientX;
       cam.lastY = e.clientY;
@@ -118,52 +123,121 @@ class GLSystem {
       c.releasePointerCapture(e.pointerId);
     });
 
+    c.addEventListener("pointercancel", () => { cam.dragging = false; });
+
     c.addEventListener("pointermove", (e) => {
       if (!cam.dragging) return;
+
       const dx = e.clientX - cam.lastX;
       const dy = e.clientY - cam.lastY;
       cam.lastX = e.clientX;
       cam.lastY = e.clientY;
 
-      cam.yaw += dx * 0.005;
-      cam.pitch += dy * 0.005;
-      cam.pitch = clamp(cam.pitch, -1.3, 1.3);
+      const lookSpeed = 0.005;
+      cam.yaw += dx * lookSpeed;
+      cam.pitch += dy * lookSpeed;
+
+      // Clamp pitch to ±90° (minus epsilon so up never degenerates)
+      const limit = (Math.PI / 2) - 0.0001;
+      cam.pitch = clamp(cam.pitch, -limit, limit);
     });
 
+    // Wheel = move forward/back (zoom without the orbit nonsense)
     c.addEventListener("wheel", (e) => {
       e.preventDefault();
-      cam.distance *= Math.exp(e.deltaY * 0.001);
-      cam.distance = clamp(cam.distance, 1.5, 25.0);
+      const cam = this.camera;
+      const forward = cameraForward(cam.yaw, cam.pitch);
+      const speed = 0.01; // tune
+      // deltaY > 0 is scroll down (usually "zoom out"/back)
+      const step = e.deltaY * speed;
+      cam.pos[0] += forward[0] * step;
+      cam.pos[1] += forward[1] * step;
+      cam.pos[2] += forward[2] * step;
     }, { passive: false });
+
+    // Double click = reset
+    c.addEventListener("dblclick", () => {
+      cam.pos = [0, 1.25, 6];
+      cam.yaw = 0.0;
+      cam.pitch = 0.0;
+    });
+  }
+
+  _installKeyboard() {
+    const onKeyDown = (e) => {
+      const k = e.key.toLowerCase();
+      if (["w","a","s","d","q","e","shift"].includes(k)) e.preventDefault();
+      this.keys.add(k);
+    };
+    const onKeyUp = (e) => this.keys.delete(e.key.toLowerCase());
+
+    this.canvas.addEventListener("keydown", onKeyDown);
+    this.canvas.addEventListener("keyup", onKeyUp);
+    window.addEventListener("keydown", onKeyDown, { passive: false });
+    window.addEventListener("keyup", onKeyUp, { passive: true });
+  }
+
+  _applyKeyboardMovement() {
+    const cam = this.camera;
+
+    const forward = cameraForward(cam.yaw, cam.pitch);
+    const worldUp = [0, 1, 0];
+    let right = normalize3(cross3(worldUp, forward));
+    let up = normalize3(cross3(forward, right));
+
+    let x = 0, y = 0, z = 0;
+    if (this.keys.has("a")) x -= 1;
+    if (this.keys.has("d")) x += 1;
+    if (this.keys.has("q")) y -= 1;
+    if (this.keys.has("e")) y += 1;
+    if (this.keys.has("w")) z += 1;
+    if (this.keys.has("s")) z -= 1;
+
+    const mag = Math.hypot(x, y, z);
+    if (mag < 1e-6) return;
+
+    const baseSpeed = 4.0; // units/sec
+    const speed = baseSpeed * (this.keys.has("shift") ? 2.5 : 1.0);
+    const step = (speed * this.dt) / mag;
+
+    cam.pos[0] += right[0] * (x * step) + up[0] * (y * step) + forward[0] * (z * step);
+    cam.pos[1] += right[1] * (x * step) + up[1] * (y * step) + forward[1] * (z * step);
+    cam.pos[2] += right[2] * (x * step) + up[2] * (y * step) + forward[2] * (z * step);
   }
 
   _frame = (now) => {
     const gl = this.gl;
 
-    // Timing
     this.dt = (now - this._last) * 0.001;
     this._last = now;
     this.time += this.dt;
 
-    // Clear
+    this._applyKeyboardMovement();
+
     gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
 
-    // Build matrices
     const aspect = this.canvas.width / this.canvas.height;
-    const proj = Mat4.perspective(60 * Math.PI/180, aspect, 0.1, 100.0);
+    const proj = Mat4.perspective(60 * Math.PI/180, aspect, 0.1, 200.0);
 
-    const eye = orbitToEye(this.camera.yaw, this.camera.pitch, this.camera.distance, this.camera.target);
-    const view = Mat4.lookAt(eye, this.camera.target, [0, 1, 0]);
+    const cam = this.camera;
+    const forward = cameraForward(cam.yaw, cam.pitch);
 
-    // Model (spin cube)
-    const model = Mat4.mul(
-      Mat4.rotationY(this.time * 0.9),
-      Mat4.rotationX(this.time * 0.6)
-    );
+    // Robust up selection near poles
+    const worldUp = [0, 1, 0];
+    const altUp = [0, 0, 1];
+    const upRef = Math.abs(dot3(forward, worldUp)) > 0.999 ? altUp : worldUp;
 
+    const center = [
+      cam.pos[0] + forward[0],
+      cam.pos[1] + forward[1],
+      cam.pos[2] + forward[2],
+    ];
+
+    const view = Mat4.lookAt(cam.pos, center, upRef);
+
+    const model = Mat4.identity(); // static cube
     const mvp = Mat4.mul(proj, Mat4.mul(view, model));
 
-    // Draw
     gl.useProgram(this.program);
     gl.bindVertexArray(this.mesh.vao);
 
@@ -198,10 +272,7 @@ out vec3 vWPos;
 void main() {
   vec4 wPos = uModel * vec4(aPos, 1.0);
   vWPos = wPos.xyz;
-
-  // Normal matrix (approx; fine for pure rotations)
   vN = mat3(uModel) * aNormal;
-
   gl_Position = uMVP * vec4(aPos, 1.0);
 }
 `;
@@ -224,7 +295,6 @@ void main() {
   float diff = max(dot(N, L), 0.0);
   float ambient = 0.18;
 
-  // cheap spec
   vec3 V = normalize(-vWPos);
   vec3 H = normalize(L + V);
   float spec = pow(max(dot(N, H), 0.0), 64.0) * 0.25;
@@ -235,48 +305,47 @@ void main() {
 `;
 
 /** =========================
- *  Mesh: Cube
+ *  Cube mesh (Fix B: CCW outward)
  *  ========================= */
 
 function createCubeMesh(gl) {
-  // 24 verts (4 per face), each face ordered CCW when viewed from outside
   const positions = new Float32Array([
     // +X
-    1,-1, 1,   1,-1,-1,   1, 1,-1,   1, 1, 1,
+     1,-1, 1,   1,-1,-1,   1, 1,-1,   1, 1, 1,
     // -X
-   -1,-1,-1,  -1,-1, 1,  -1, 1, 1,  -1, 1,-1,
+    -1,-1,-1,  -1,-1, 1,  -1, 1, 1,  -1, 1,-1,
     // +Y
-   -1, 1, 1,   1, 1, 1,   1, 1,-1,  -1, 1,-1,
+    -1, 1, 1,   1, 1, 1,   1, 1,-1,  -1, 1,-1,
     // -Y
-   -1,-1,-1,   1,-1,-1,   1,-1, 1,  -1,-1, 1,
+    -1,-1,-1,   1,-1,-1,   1,-1, 1,  -1,-1, 1,
     // +Z
-   -1,-1, 1,   1,-1, 1,   1, 1, 1,  -1, 1, 1,
+    -1,-1, 1,   1,-1, 1,   1, 1, 1,  -1, 1, 1,
     // -Z
-    1,-1,-1,  -1,-1,-1,  -1, 1,-1,   1, 1,-1
+     1,-1,-1,  -1,-1,-1,  -1, 1,-1,   1, 1,-1
   ]);
 
   const normals = new Float32Array([
     // +X
-    1,0,0,  1,0,0,  1,0,0,  1,0,0,
+     1,0,0,  1,0,0,  1,0,0,  1,0,0,
     // -X
-   -1,0,0, -1,0,0, -1,0,0, -1,0,0,
+    -1,0,0, -1,0,0, -1,0,0, -1,0,0,
     // +Y
-    0,1,0,  0,1,0,  0,1,0,  0,1,0,
+     0,1,0,  0,1,0,  0,1,0,  0,1,0,
     // -Y
-    0,-1,0, 0,-1,0, 0,-1,0, 0,-1,0,
+     0,-1,0, 0,-1,0, 0,-1,0, 0,-1,0,
     // +Z
-    0,0,1,  0,0,1,  0,0,1,  0,0,1,
+     0,0,1,  0,0,1,  0,0,1,  0,0,1,
     // -Z
-    0,0,-1, 0,0,-1, 0,0,-1, 0,0,-1
+     0,0,-1, 0,0,-1, 0,0,-1, 0,0,-1
   ]);
 
   const indices = new Uint16Array([
-    0,1,2,  0,2,3,
-    4,5,6,  4,6,7,
-    8,9,10, 8,10,11,
-    12,13,14, 12,14,15,
-    16,17,18, 16,18,19,
-    20,21,22, 20,22,23
+     0, 1, 2,   0, 2, 3,
+     4, 5, 6,   4, 6, 7,
+     8, 9,10,   8,10,11,
+    12,13,14,  12,14,15,
+    16,17,18,  16,18,19,
+    20,21,22,  20,22,23
   ]);
 
   const vao = gl.createVertexArray();
@@ -301,7 +370,6 @@ function createCubeMesh(gl) {
   gl.bindVertexArray(null);
   return { vao, indexCount: indices.length };
 }
-
 
 /** =========================
  *  Shader utils
@@ -337,8 +405,7 @@ function createProgram(gl, vsSrc, fsSrc) {
 }
 
 /** =========================
- *  Tiny math (Mat4)
- *  Column-major, WebGL-friendly
+ *  Mat4 (column-major)
  *  ========================= */
 
 const Mat4 = {
@@ -363,10 +430,10 @@ const Mat4 = {
     return out;
   },
 
-  lookAt(eye, target, up) {
-    const z = normalize3(sub3(eye, target));     // forward
-    const x = normalize3(cross3(up, z));         // right
-    const y = cross3(z, x);                      // up corrected
+  lookAt(eye, center, up) {
+    const z = normalize3(sub3(eye, center)); // forward (camera space -Z)
+    const x = normalize3(cross3(up, z));     // right
+    const y = cross3(z, x);                  // corrected up
 
     const out = Mat4.identity();
     out[0] = x[0]; out[4] = x[1]; out[8]  = x[2];
@@ -379,28 +446,7 @@ const Mat4 = {
     return out;
   },
 
-  rotationX(a) {
-    const c = Math.cos(a), s = Math.sin(a);
-    return new Float32Array([
-      1,0,0,0,
-      0,c,s,0,
-      0,-s,c,0,
-      0,0,0,1
-    ]);
-  },
-
-  rotationY(a) {
-    const c = Math.cos(a), s = Math.sin(a);
-    return new Float32Array([
-      c,0,-s,0,
-      0,1,0,0,
-      s,0,c,0,
-      0,0,0,1
-    ]);
-  },
-
   mul(a, b) {
-    // out = a*b
     const out = new Float32Array(16);
     for (let c = 0; c < 4; c++) {
       for (let r = 0; r < 4; r++) {
@@ -420,7 +466,6 @@ const Mat4 = {
  *  ========================= */
 
 function clamp(v, lo, hi) { return Math.max(lo, Math.min(hi, v)); }
-
 function sub3(a, b) { return [a[0]-b[0], a[1]-b[1], a[2]-b[2]]; }
 function dot3(a, b) { return a[0]*b[0] + a[1]*b[1] + a[2]*b[2]; }
 function cross3(a, b) {
@@ -436,19 +481,15 @@ function normalize3(v) {
   return [v[0]/L, v[1]/L, v[2]/L];
 }
 
-function orbitToEye(yaw, pitch, dist, target) {
+/** yaw/pitch -> forward direction */
+function cameraForward(yaw, pitch) {
   const cy = Math.cos(yaw), sy = Math.sin(yaw);
   const cp = Math.cos(pitch), sp = Math.sin(pitch);
-  const x = dist * cp * sy;
-  const y = dist * sp;
-  const z = dist * cp * cy;
-  return [target[0] + x, target[1] + y, target[2] + z];
+  // Forward points where camera looks
+  return normalize3([cp * sy, sp, cp * cy]);
 }
 
-/** =========================
- *  Boot
- *  ========================= */
-
+/** Boot */
 const canvas = document.getElementById("gl");
 new GLSystem(canvas);
 </script>
