--- a/webgl-test-2/index.html
+++ b/webgl-test-2/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>WebGL2 System - Multi File</title>
+  <title>WebGL2 System</title>
   <style>
     html, body { margin: 0; height: 100%; background: #111; }
     canvas { width: 100%; height: 100%; display: block; outline: none; }
