gpu based mesh instancing v3

--- a/webgl-test-3/index.html
+++ b/webgl-test-3/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>WebGL FPS</title>
+<title>WebGL FPS + Instancing</title>
 <style>
 body { margin:0; overflow:hidden; background:black; }
 canvas { display:block; }
